1. Now all agents can save the lcc result. 2. Central algorithms can be executed in ubuntu as well now.